grammars/prolog/test/corpus/simple.txt
==================
Clause 1
==================

test_predicate.

---

(source_file
  (clause_term
    (atom)
    (end)))

==================
Clause 2
==================

test_predicate:-
  true.

---

(source_file
  (clause_term
    (operation_1200xfx
      (atom)
      (operator_1200xfx)
      (atom))
    (end)))

====================
DCG
====================

test_dcg-->
  true.

---

(source_file
  (clause_term
    (operation_1200xfx
      (atom)
      (operator_1200xfx)
      (atom))
    (end)))

====================
Directive
====================

:-test_predicate.

---

(source_file
  (directive_term
    (directive_head)
    (atom)
    (end)))
